--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -16,4 +16,7 @@
     <string name="login">Login</string>
     <string name="doesn_t_have_an_account">"Doesn't have an account? "</string>
     <string name="signup_here">Signup here</string>
+    <string name="hello_lukman">Hello, Lukman!</string>
+    <string name="we_have_recommendation_for_you">We have recommendation for you</string>
+    <string name="kisah_adonis_dan_aphrodite">Kisah Adonis dan Aphrodite</string>
 </resources>
